--- a/index.html
+++ b/index.html
@@ -132,32 +132,44 @@
 				<section>
 					<h2><span>1.</span> Add a new feature branch</h2>
 					<p>
-						Only push to the "develop" branch and your own feature branch! You can list the current branches in the project with <code>$ git status</code>.
+						askdjaslk daoslikd joaisu oaisud.
 					</p>
 
-					<p>
-						Switch to the development branch by running <code>$ git checkout develop</code>. You should now be on that specific branch, meaning all edits will be done only to that branch. You can see the current branch by entering <code>$ git status</code>.
-					</p>
+					<h3 class="accordion">CLI</h3>
+					<div class="accordion--content">
+						<p>
+							Only push to the "develop" branch and your own feature branch! You can list the current branches in the project with <code>$ git status</code>.
+						</p>
 
-					<h3>CLI</h3>
-					<p>
-						Add it by entering <code>$ git branch feature1 develop</code> into the CLI, and then switching to it with <code>$ git checkout feature1</code>. Switching to the <code>master</code> branch and listing changes with <code>$ git status</code> reveals that the <code>master</code> branch has no registered changes – all in good order!
-					</p>
+						<p>
+							Switch to the development branch by running <code>$ git checkout develop</code>. You should now be on that specific branch, meaning all edits will be done only to that branch. You can see the current branch by entering <code>$ git status</code>.
+						</p>
 
-					<h3>GitHub</h3>
-					<p>
-						asdf
-					</p>
+						<p>
+							Add it by entering <code>$ git branch feature1 develop</code> into the CLI, and then switching to it with <code>$ git checkout feature1</code>. Switching to the <code>master</code> branch and listing changes with <code>$ git status</code> reveals that the <code>master</code> branch has no registered changes – all in good order!
+						</p>
+					</div>
 
-					<h3>Bitbucket</h3>
-					<p>
-						asdf
-					</p>
+					<h3 class="accordion">GitHub</h3>
+					<div class="accordion--content">
+						<p>
+							asdf
+						</p>
+					</div>
 
-					<h3>Visual Studio 2015</h3>
-					<p>
-						In the Team Explorer's "Branches" view, right-click on the branch you want to branch out from, for example, "master". Click "New Local Branch From..." and enter the name of the new branch in the next screen. You can now switch between the branches by double-clicking on the one you wish to work on.
-					</p>
+					<h3 class="accordion">Bitbucket</h3>
+					<div class="accordion--content">
+						<p>
+							asdf
+						</p>
+					</div>
+
+					<h3 class="accordion">Visual Studio 2015</h3>
+					<div class="accordion--content">
+						<p>
+							In the Team Explorer's "Branches" view, right-click on the branch you want to branch out from, for example, "master". Click "New Local Branch From..." and enter the name of the new branch in the next screen. You can now switch between the branches by double-clicking on the one you wish to work on.
+						</p>
+					</div>
 				</section>
 
 				<div class="task">
@@ -176,30 +188,36 @@
 						The <i>pull request</i> is used as a way to communicate that changes have taken place and that you wish these to be reviewed and added to the main branch (develop or master). A pull request should always contain a pertinent, meaningful description.
 					</p>
 
-					<h3>GitHub</h3>
-					<p>
-						asdf
-					</p>
+					<h3 class="accordion">GitHub</h3>
+					<div class="accordion--content">
+						<p>
+							asdf
+						</p>
+					</div>
 
-					<h3>Bitbucket</h3>
-					<p>
-						In Bitbucket there is a choice to "Close branch" after the pull request is merged. Click "Create pull request".
-					</p>
+					<h3 class="accordion">Bitbucket</h3>
+					<div class="accordion--content">
+						<p>
+							In Bitbucket there is a choice to "Close branch" after the pull request is merged. Click "Create pull request".
+						</p>
+					</div>
 
-					<h3>Visual Studio 2015</h3>
-					<p>
-						<a href="https://www.visualstudio.com/en-us/docs/git/tutorial/pullrequest" target="_blank" rel="noopener noreferrer">More about pull requests</a> for VS2015, or <a href="https://www.visualstudio.com/en-us/docs/git/pull-requests" target="_blank" rel="noopener noreferrer">read this</a> for some overview.
-					</p>
+					<h3 class="accordion">Visual Studio 2015</h3>
+					<div class="accordion--content">
+						<p>
+							<a href="https://www.visualstudio.com/en-us/docs/git/tutorial/pullrequest" target="_blank" rel="noopener noreferrer">More about pull requests</a> for VS2015, or <a href="https://www.visualstudio.com/en-us/docs/git/pull-requests" target="_blank" rel="noopener noreferrer">read this</a> for some overview.
+						</p>
 
-					<p>
-						Creating a pull request in VS2015 requires that you are <a href="https://www.visualstudio.com/en-us/docs/setup-admin/team-services/connect-to-visual-studio-team-services#vs" target="_blank" rel="noopener noreferrer">connected to Team Services</a>. When you have pushed a commit, you will see an update panel in the "Code" section of the TFS/VS web site - click on "Create a pull request".
-					</p>
+						<p>
+							Creating a pull request in VS2015 requires that you are <a href="https://www.visualstudio.com/en-us/docs/setup-admin/team-services/connect-to-visual-studio-team-services#vs" target="_blank" rel="noopener noreferrer">connected to Team Services</a>. When you have pushed a commit, you will see an update panel in the "Code" section of the TFS/VS web site - click on "Create a pull request".
+						</p>
 
-					<img src="img/tfs_pullrequest.png">
+						<img src="img/tfs_pullrequest.png">
 
-					<p>
-						Make your comments in the view and request a pull. Approve or comment as needed in the Pull Requests view. When merging you may choose to delete the source branch. However, it doesn't seem like the local branch will be deleted.
-					</p>
+						<p>
+							Make your comments in the view and request a pull. Approve or comment as needed in the Pull Requests view. When merging you may choose to delete the source branch. However, it doesn't seem like the local branch will be deleted.
+						</p>
+					</div>
 
 					<aside>
 						<h3>Additional reading</h3>
@@ -228,24 +246,30 @@
 						</p>
 					</div>
 
-					<h3>GitHub</h3>
-					<p>
-						asdf
-					</p>
+					<h3 class="accordion">GitHub</h3>
+					<div class="accordion--content">
+						<p>
+							asdf
+						</p>
+					</div>
 
-					<h3>Bitbucket</h3>
-					<p>
-						asdf
-					</p>
+					<h3 class="accordion">Bitbucket</h3>
+					<div class="accordion--content">
+						<p>
+							asdf
+						</p>
 
-					<p>
-						<b>NOTE</b>: In Bitbucket there is a choice to "Close source branch" in the "Merge pull request" panel. This eliminates the below step of erasing the remote (Bitbucket) repository.
-					</p>
+						<p>
+							<b>NOTE</b>: In Bitbucket there is a choice to "Close source branch" in the "Merge pull request" panel. This eliminates the below step of erasing the remote (Bitbucket) repository.
+						</p>
+					</div>
 
-					<h3>Visual Studio 2015</h3>
-					<p>
-						In the Team Explorer's "Branches" view, right-click the develop (or master) branch and click "Merge From...". In "Merge from branch" simply choose which feature branch you want integrated into the develop (or master) branch. Finally, click "Merge" and make sure to Sync the merge.
-					</p>
+					<h3 class="accordion">Visual Studio 2015</h3>
+					<div class="accordion--content">
+						<p>
+							In the Team Explorer's "Branches" view, right-click the develop (or master) branch and click "Merge From...". In "Merge from branch" simply choose which feature branch you want integrated into the develop (or master) branch. Finally, click "Merge" and make sure to Sync the merge.
+						</p>
+					</div>
 				</section>
 
 				<section>
@@ -254,25 +278,33 @@
 						asdf
 					</p>
 
-					<h3>CLI</h3>
-					<p>
-						<code>$ git branch -d [branch-name]</code>
-					</p>
+					<h3 class="accordion">CLI</h3>
+					<div class="accordion--content">
+						<p>
+							<code>$ git branch -d [branch-name]</code>
+						</p>
+					</div>
 
-					<h3>GitHub</h3>
-					<p>
-						asdf
-					</p>
+					<h3 class="accordion">GitHub</h3>
+					<div class="accordion--content">
+						<p>
+							asdf
+						</p>
+					</div>
 
-					<h3>Bitbucket</h3>
-					<p>
-						asdf
-					</p>
+					<h3 class="accordion">Bitbucket</h3>
+					<div class="accordion--content">
+						<p>
+							asdf
+						</p>
+					</div>
 
-					<h3>Visual Studio 2015</h3>
-					<p>
-						asdf
-					</p>
+					<h3 class="accordion">Visual Studio 2015</h3>
+					<div class="accordion--content">
+						<p>
+							asdf
+						</p>
+					</div>
 				</section>
 
 				<section>
@@ -281,25 +313,33 @@
 						asdf
 					</p>
 
-					<h3>CLI</h3>
-					<p>
-						<code>$ git push origin --delete [branch-name]</code>
-					</p>
+					<h3 class="accordion">CLI</h3>
+					<div class="accordion--content">
+						<p>
+							<code>$ git push origin --delete [branch-name]</code>
+						</p>
+					</div>
 
-					<h3>GitHub</h3>
-					<p>
-						asdf
-					</p>
+					<h3 class="accordion">GitHub</h3>
+					<div class="accordion--content">
+						<p>
+							asdf
+						</p>
+					</div>
 
-					<h3>Bitbucket</h3>
-					<p>
-						In Bitbucket a branch (sorted by "active" or "merged") can be deleted by going to "Branches" under the "Navigation" panel. To the far right a "..." symbol can be clicked. If you have merged your changes, make sure to get rid of old branches. To do so, click "Delete branch" in the "..." panel.
-					</p>
+					<h3 class="accordion">Bitbucket</h3>
+					<div class="accordion--content">
+						<p>
+							In Bitbucket a branch (sorted by "active" or "merged") can be deleted by going to "Branches" under the "Navigation" panel. To the far right a "..." symbol can be clicked. If you have merged your changes, make sure to get rid of old branches. To do so, click "Delete branch" in the "..." panel.
+						</p>
+					</div>
 
-					<h3>Visual Studio 2015</h3>
-					<p>
-						asdf
-					</p>
+					<h3 class="accordion">Visual Studio 2015</h3>
+					<div class="accordion--content">
+						<p>
+							asdf
+						</p>
+					</div>
 				</section>
 
 				<div class="task">
@@ -321,25 +361,33 @@
 						Switch to the development branch by running <code>$ git checkout develop</code>. You should now be on that specific branch, meaning all edits will be done only to that branch.
 					</p>
 
-					<h3>CLI</h3>
-					<p>
-						Add it by entering <code>$ git branch feature1 develop</code> into the CLI, and then switching to it with <code>$ git checkout feature1</code>. Switching to the master branch and listing changes with <code>$ git status</code> reveals that the master branch has no registered changes – all in good order!
-					</p>
+					<h3 class="accordion">CLI</h3>
+					<div class="accordion--content">
+						<p>
+							Add it by entering <code>$ git branch feature1 develop</code> into the CLI, and then switching to it with <code>$ git checkout feature1</code>. Switching to the master branch and listing changes with <code>$ git status</code> reveals that the master branch has no registered changes – all in good order!
+						</p>
+					</div>
 
-					<h3>GitHub</h3>
-					<p>
-						asdf
-					</p>
+					<h3 class="accordion">GitHub</h3>
+					<div class="accordion--content">
+						<p>
+							asdf
+						</p>
+					</div>
 
-					<h3>Bitbucket</h3>
-					<p>
-						asdf
-					</p>
+					<h3 class="accordion">Bitbucket</h3>
+					<div class="accordion--content">
+						<p>
+							asdf
+						</p>
+					</div>
 
-					<h3>Visual Studio 2015</h3>
-					<p>
-						In the Team Explorer's "Branches" view, right-click on the branch you want to branch out from, for example, "master". Click "New Local Branch From..." and enter the name of the new branch in the next screen. You can now switch between the branches by double-clicking on the one you wish to work on.
-					</p>
+					<h3 class="accordion">Visual Studio 2015</h3>
+					<div class="accordion--content">
+						<p>
+							In the Team Explorer's "Branches" view, right-click on the branch you want to branch out from, for example, "master". Click "New Local Branch From..." and enter the name of the new branch in the next screen. You can now switch between the branches by double-clicking on the one you wish to work on.
+						</p>
+					</div>
 				</section>
 
 				<section>
@@ -348,25 +396,33 @@
 						Finally, follow the general instructions in <a href="#task2">Task 2</a>: Don't push to <code>master</code>; instead push the updates to <code>branch</code> and do a pull request to further familiarize yourself with this workflow. Accept and integrate into <code>master</code>, and then cleanup the old branch.
 					</p>
 
-					<h3>CLI</h3>
-					<p>
-						<code>$ git push origin --delete [branch-name]</code>
-					</p>
+					<h3 class="accordion">CLI</h3>
+					<div class="accordion--content">
+						<p>
+							<code>$ git push origin --delete [branch-name]</code>
+						</p>
+					</div>
 
-					<h3>GitHub</h3>
-					<p>
-						asdf
-					</p>
+					<h3 class="accordion">GitHub</h3>
+					<div class="accordion--content">
+						<p>
+							asdf
+						</p>
+					</div>
 
-					<h3>Bitbucket</h3>
-					<p>
-						asdf
-					</p>
+					<h3 class="accordion">Bitbucket</h3>
+					<div class="accordion--content">
+						<p>
+							asdf
+						</p>
+					</div>
 
-					<h3>Visual Studio 2015</h3>
-					<p>
-						asdf
-					</p>
+					<h3 class="accordion">Visual Studio 2015</h3>
+					<div class="accordion--content">
+						<p>
+							asdf
+						</p>
+					</div>
 				</section>
 
 				<div class="task">
@@ -384,27 +440,38 @@
 						Finally, follow the general instructions in <a href="#task2">Task 2</a>: Don't push to <code>master</code>; instead push the updates to <code>branch</code> and do a pull request to further familiarize yourself with this workflow. Accept and integrate into <code>master</code>, and then cleanup the old branch.
 					</p>
 
-					<h3>CLI</h3>
-					<p>
-						<code>$ git push origin --delete [branch-name]</code>
-					</p>
+					<h3 class="accordion">CLI</h3>
+					<div class="accordion--content">
+						<p>
+							<code>$ git push origin --delete [branch-name]</code>
+						</p>
+					</div>
 
-					<h3>GitHub</h3>
-					<p>
-						asdf
-					</p>
+					<h3 class="accordion">GitHub</h3>
+					<div class="accordion--content">
+						<p>
+							asdf
+						</p>
+					</div>
 
-					<h3>Bitbucket</h3>
-					<p>
-						asdf
-					</p>
+					<h3 class="accordion">Bitbucket</h3>
+					<div class="accordion--content">
+						<p>
+							asdf
+						</p>
+					</div>
 
-					<h3>Visual Studio 2015</h3>
-					<p>
-						asdf
-					</p>
+					<h3 class="accordion">Visual Studio 2015</h3>
+					<div class="accordion--content">
+						<p>
+							asdf
+						</p>
+					</div>
 				</section>
 			</article>
 		</div>
+
+		<script src="https://cdn.polyfill.io/v2/polyfill.min.js" defer></script>
+		<script src="js/site.js" defer></script>
 	</body>
 </html>
